@@ -1,3 +1,8 @@
+2008-05-09  Richard Guenther  <rguenther@suse.de>
+
+	PR tree-optimization/36187
+	* g++.dg/opt/pr36187.C: New testcase.
+
 2008-05-08  Richard Guenther  <rguenther@suse.de>
 
 	PR middle-end/36154
